Added donation form

--- a/Thank you.html
+++ b/Thank you.html
@@ -129,85 +129,10 @@ input[type=submit]:hover {
 			<li style="float:right"><a class="nav" href="OurWebSite.html">FAQ</a>
 		</ul>
 
-<p>You can be one of the many peope who influence the way our planet looks like. Let's add more recylcing bins on the street!</p>
-<p>If you want to donate, fill the application:</p>
+<p>Thank you for your contribution! We will proceed your generous donation and send you confirmation email.</p>
 
+</center>
 
-	
-<div class="container">
-		<form action="Thank you.html">
-		  <div class="row">
-			<div class="col-25">
-			  <label for="fname">First Name</label>
-			</div>
-			<div class="col-75">
-			  <input type="text" id="fname" name="firstname" placeholder="Your name">
-			</div>
-		  </div>
-
-		  <div class="row">
-			<div class="col-25">
-			  <label for="lname">Last Name</label>
-			</div>
-			<div class="col-75">
-			  <input type="text" id="lname" name="lastname" placeholder="Your last name">
-			</div>
-		  </div>
-
-		  <div class="row">
-				<div class="col-25">
-				  <label for="lname">Email</label>
-				</div>
-				<div class="col-75">
-				  <input type="text" id="lname" name="lastname" placeholder="Your email">
-				</div>
-			  </div>
-
-		  <div class="row">
-			<div class="col-25">
-			  <label for="country">Country</label>
-			</div>
-			<div class="col-75">
-			  <select id="country" name="country">
-				<option value="usa">USA</option>
-				<option value="australia">Australia</option>
-				<option value="canada">Canada</option>				
-			  </select>
-			</div>
-		  </div>
-
-		  <div class="row">
-				<div class="col-25">
-				  <label for="lname"> Card Number</label>
-				</div>
-				<div class="col-75">
-				  <input type="text" id="lname" name="lastname" placeholder="Your card number">
-				</div>
-			  </div>
-
-			<div class="row">
-				<div class="col-25">
-					<label for="lname">Amount</label>
-				</div>
-				<div class="col-75">
-					<input type="text" id="lname" name="lastname" placeholder="Amount of money you would like to donate">
-				</div>
-			</div>
-
-		  <div class="row">
-			<div class="col-25">
-			  <label for="subject">Comment</label>
-			</div>
-			<div class="col-75">
-			  <textarea id="subject" name="subject" placeholder="Write you comments and suggestions" style="height:200px"></textarea>
-			</div>
-		  </div>
-
-		  <div class="row">
-			<input type="submit" value="Submit" >
-		  </div>
-		</form>
-	</div>
 
 </body>
 
