--- a/contact-submitted.html
+++ b/contact-submitted.html
@@ -1,34 +1,30 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-	<title>SaveThePlanet</title>
-    <link rel="stylesheet" href="Contacts.css" type="text/css" />
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-</head>
-
-<body style = "background: url(https://media.istockphoto.com/photos/green-natural-background-picture-id649675876?k=6&m=649675876&s=612x612&w=0&h=TSRg-zhV5L7mxb-Wr1ft73JuhZ0qVgQaARa2JMANoy0=); background-size: 100%" > 
-
-<div class="page">
-
-	<div class="nav">
-		<ul>
-			<li class="navbar"><h1>SAVE THE PLANET</h1></li>
-			<li class="navbar"><a href="OurWebSite.html">Home</a></li>
-			<li class="navbar"><a href="Donation.html">Donation</a></li>
-			<li class="navbar"><a href="Contacts.html">Contacts</a></li>
-		</ul>
-	</div>
-
-	<p>We've recevied your contact information and will contact you shortly!</p>
-
-</div>
-
-<div class="footer">
-		<p class="address">695 Park Ave New York, NY 10065</p>
-		<p class="copy">&copy; 2019.</p>
-</div>
-
-</body>
-
+   <head>
+      <title>SaveThePlanet</title>
+      <link rel="stylesheet" href="Contacts.css" type="text/css" />
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+   </head>
+   <body style = "background: url(https://media.istockphoto.com/photos/green-natural-background-picture-id649675876?k=6&m=649675876&s=612x612&w=0&h=TSRg-zhV5L7mxb-Wr1ft73JuhZ0qVgQaARa2JMANoy0=); background-size: 200%">
+      <div class="nav">
+         <ul>
+            <li class="navbar">
+               <h1>SAVE THE PLANET</h1>
+            </li>
+            <li class="navbar"><a href="OurWebSite.html">Home</a></li>
+            <li class="navbar"><a href="Donation.html">Donation</a></li>
+            <li class="navbar"><a href="Contacts.html">Contacts</a></li>
+         </ul>
+      </div>
+      <div class="page">
+         <li class="contact">
+            <h3>We've recevied your contact information and will contact you shortly!</h3>
+         </li>
+      </div>
+      <div class="footer">
+         <p class="address">695 Park Ave New York, NY 10065</p>
+         <p class="copy">&copy; 2019.</p>
+      </div>
+   </body>
 </html>
+COPY TO CLIPBOARD	
