--- a/OurWebSite.html
+++ b/OurWebSite.html
@@ -1,63 +1,33 @@
 <!DOCTYPE html>
 <html>
-    <head><title>SaveThePlanet</title>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<style>
-			ul {
-  				list-style-type: none;
-				margin: 0;
-				padding: 0;
-				overflow: hidden;
-				background-color: #333;
-			}
-
-			li {
-				float: left;
-			}
-
-			li a {
-				display: block;
-				color: white;
-				text-align: center;
-				padding: 14px 16px;
-				text-decoration: none;
-			}
-
-			li a:hover {
-				background-color: #111;
-			}				
-		</style>
-	</head>
-
-<body style = "background: url(https://media.istockphoto.com/photos/green-natural-background-picture-id649675876?k=6&m=649675876&s=612x612&w=0&h=TSRg-zhV5L7mxb-Wr1ft73JuhZ0qVgQaARa2JMANoy0=); background-size: 100%" > 
-<center>
-	<hr>
-	 <!-- <h3>HOME | GOALS | DONATE | <a href="http://www.google.com">GOOGLE</a> | CONTACTS</h3> -->
-	<h1>SAVE THE PLANET</h1>
-	<hr>
-
-	<div class="nav">
-		<ul class="nav">
-			<li class="nav"><a class="nav"href="OurWebSite.html">Home</a></li>
-			<li class="nav"><a class="nav" href="Donation.html">Donation</a></li>
-			<li class="nav"><a class="nav" href="Contacts.html">Contacts</a></li>
-		</ul>
-	</div>
-</center>
-
-
-	This is <span id="changing">beautiful</span>
-<script>
-	
-	var words = ['beautiful', 'cool', 'amazing'];		// Array of words	
-	setInterval ( function() {			// Function that executes every 2000 milliseconds  	
-  	var randomNumber = Math.round( Math.random() * (words.length-1) );		// Random number generator  	
-     $('#changing').html( words[ randomNumber ] );		// Change the word in the span for a random one in the array of words
-	}, 1000);
-</script>
-
-
-
-</body>
-
+   <head>
+      <title>SaveThePlanet</title>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+      <link rel="stylesheet" href="Contacts.css" type="text/css" />
+   </head>
+   <body style = "background: url(https://media.istockphoto.com/photos/green-natural-background-picture-id649675876?k=6&m=649675876&s=612x612&w=0&h=TSRg-zhV5L7mxb-Wr1ft73JuhZ0qVgQaARa2JMANoy0=); background-size: 200%" >
+      <div class="nav">
+         <ul>
+            <li class="navbar">
+               <h1>SAVE THE PLANET</h1>
+            </li>
+            <li class="navbar"><a href="OurWebSite.html">Home</a></li>
+            <li class="navbar"><a href="Donation.html">Donation</a></li>
+            <li class="navbar"><a href="Contacts.html">Contacts</a></li>
+         </ul>
+      </div>
+      This is <span id="changing">beautiful</span>
+      <script>
+         var words = ['beautiful', 'cool', 'amazing'];		// Array of words	
+         setInterval ( function() {			// Function that executes every 2000 milliseconds  	
+          	var randomNumber = Math.round( Math.random() * (words.length-1) );		// Random number generator  	
+             $('#changing').html( words[ randomNumber ] );		// Change the word in the span for a random one in the array of words
+         }, 1000);
+      </script>
+      <p>This page is not finished yet</p>
+      <div class="footer">
+         <p class="address">695 Park Ave New York, NY 10065</p>
+         <p class="copy">&copy; 2019.</p>
+      </div>
+   </body>
 </html>
